syntax = "proto3";
package provenance.ibcratelimit.v1;

import "gogoproto/gogo.proto";

option go_package          = "github.com/provenance-io/provenance/x/ibcratelimit";
option java_package        = "io.provenance.ibcratelimit.v1";
option java_multiple_files = true;

// Params defines the parameters for the ibcratelimit module.
message Params {
  // contract_address is the address of the rate limiter contract.
  string contract_address = 1;
}
